add game settings and remove test routes
