# server/src/helpers/constants.ts
@@ -1,0 +1,6 @@
+const constants = {
+  colors: [ 'red', 'green', 'blue' ],
+  boardSize: 10
+}
+
+export default constants
