# server/src/routes/test-routes.ts
@@ -1,10 +1,0 @@
-import * as Express from 'express'
-import { authMiddleware } from '../services/user-service'
-
-const router = Express.Router()
-
-router.get('/hello', authMiddleware(), (req, res) => {
-  res.send('world')
-})
-
-export default router
